# maxwells-wallet

./: .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  ANALYTICS_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIXES.md  LICENSE  MAKEFILE_GUIDE.md  Makefile  OPENSSF.md  QUICKSTART.md  README.md  SECURITY.md  TEST_RESULTS.md  V0.3_SUMMARY.md  codecov.yml  crowdin.yaml  crowdin.yml  docker-compose.demo.yaml  docker-compose.dev.yaml  docker-compose.split.yaml  docker-compose.split.yml  docker-compose.yaml  docker-compose.yml  forge.config.yaml  justfile  mkdocs.yml  package-lock.json  setup.sh
.claude/: agents  skills
.cursor/: README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: commit-msg
.github/: dependabot.yml  requirements-docs.in  requirements-docs.txt
.just/: db.just  dev.just  docker.just  i18n.just  release.just  test.just  utils.just
.planning/: BG-CHECKPOINT.md  BG-PROGRESS.md  MILESTONES.md  PHASE-02-COMPLETE.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.waypoint/: Makefile  README.md
backend/: .dockerignore  .env.example  .envrc  Dockerfile  README.md  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 1b7c2fce9b4b_add_budgets_table_for_v0_3.py  1e79b0957e91_add_validation_check_constraints_for_.py  2a92177dfb54_add_custom_format_configs_table.py  2b9c8a09f9d4_add_batch_import_session_model.py  2d2f32056af5_drop_legacy_categories_table.py  36cfdc725bac_add_due_day_and_credit_limit_to_tags.py  36d3a72a4e57_add_account_tag_id_to_transactions.py  3b61479d0fba_add_header_signature_to_custom_format_.py  4535a448d09f_merge_batch_import_migration.py  4a20f1655011_backfill_account_tag_id.py  59bd28abb36b_add_transfer_fields.py  5a841ee04972_add_dashboards_table.py  640ad28bea8a_convert_datetime_columns_to_timezone_.py  6b27d8fc1026_add_category_rules_table_for_v0_3.py  6ce6205b5a58_add_import_sessions_table_and_link_to_.py  72eca9e7f907_add_content_hash_no_account.py  79d69775547d_add_merchant_aliases.py  7a9e75752cd8_add_composite_indexes_for_performance.py  8ae9be195232_add_missing_fk_constraints_for_postgres.py  9bcc739e9765_add_saved_filters_table.py  a1b2c3d4e5f6_add_tags_system.py  a2b3c4d5e6f7_drop_assistant_settings_columns.py  ab31f6a47a0d_add_split_amounts_and_dashboard_widgets.py  afa00d0722eb_add_sort_order_and_color_to_tags.py  b2c3d4e5f6a7_rename_category_rules_to_tag_rules.py  b2f2d958aa11_add_recurring_patterns_table_for_v0_3.py  b3c4d5e6f7g8_add_app_settings_table.py  c3d4e5f6a7b8_rename_budget_category_to_tag.py  dbcc12063912_add_content_hash_to_transactions.py  e2a1fd22eee3_drop_title_from_dashboard_widgets.py  ea943ea0e6ab_merge_content_hash_and_drop_categories_.py  f1a2b3c4d5e6_add_assistant_settings_columns.py  f29bca4459fc_add_date_range_type_to_dashboards.py  ff399295d095_add_users_table.py
backend/app/: category_inference.py  config.py  csv_parser.py  database.py  errors.py  main.py  models.py  orm.py  schemas.py  seed.py  tag_inference.py  version.py
backend/app/middleware/: __init__.py  demo_mode.py  query_logging.py  security_headers.py
backend/app/observability/: __init__.py  alerting.py  config.py  health.py  logging_config.py  metrics.py  middleware.py  router.py  tracing.py
backend/app/parsers/: __init__.py  base.py  builtin_configs.py  registry.py
backend/app/parsers/formats/: __init__.py  amex_cc.py  bofa_bank.py  bofa_cc.py  custom_csv.py  inspira_hsa.py  qfx.py  qif.py  venmo.py
backend/app/routers/: accounts.py  admin.py  assistant.py  auth.py  budgets.py  categories.py  category_rules.py  dashboard.py  dashboards.py  filters.py  import_custom.py  import_helpers.py  import_router.py  merchants.py  recurring.py  report_analytics.py  report_helpers.py  reports.py  settings.py  tag_rules.py  tags.py  test.py  transactions.py  transfers.py
backend/app/services/: backup.py  scheduler.py
backend/app/services/assistant/: __init__.py  agent.py  env_config.py  prompts.py  providers.py  store.py  tokenizer.py  tools.py
backend/app/utils/: __init__.py  auth.py  hashing.py  pagination.py
backend/scripts/: init_db.py  reset_password.py  seed.py  setup_demo.py
backend/sqlmodel/: __init__.py
backend/sqlmodel/sql/: __init__.py  sqltypes.py
backend/tests/: conftest.py  test_accounts.py  test_accounts_comprehensive.py  test_admin_comprehensive.py  test_advanced_search.py  test_apply_alias.py  test_assistant.py  test_auth.py  test_backup.py  test_backup_api.py  test_batch_import.py  test_budgets.py  test_budgets_comprehensive.py  test_categories.py  test_category_rules.py  test_content_hashing.py  test_coverage_gaps.py  test_csv_autodetect.py  test_csv_import.py  test_custom_csv_parser.py  test_dashboard.py  test_dashboards.py  test_demo_mode_middleware.py  test_e2e_dashboards.py  test_filtering.py  test_filters_comprehensive.py  test_import_comprehensive.py  test_merchant_aliases.py  test_merchants_comprehensive.py  test_new_analytics.py  test_observability.py  test_orm_relationships.py  test_property_based.py  test_quicken_import.py  test_reconciliation.py  test_recurring.py  test_recurring_comprehensive.py  test_report_filters.py  test_reports.py  test_reports_comprehensive.py  (+16 more)
backend/tests/e2e/: __init__.py  conftest.py  test_budgets_workflow.py  test_category_rules_workflow.py  test_dashboards.py  test_full_workflow.py  test_import_workflow.py  test_recurring_workflow.py  test_tag_rules_workflow.py  test_transactions_workflow.py
backend/tests/performance/: __init__.py  conftest.py  test_dashboard_perf.py  test_query_analysis.py  test_reports_perf.py  test_stress.py  test_transactions_perf.py
data/: .gitignore  CLAUDE.md  Makefile  anonymize.py  pyproject.toml
docs/: DATA_MODEL.md  MAKEFILE.md  OBSERVABILITY.md  i18n-workflow.md  installation.md
docs-site/: CNAME  domain-model.md  index.md
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  (+5 more)
(+434 files in other folders)
