[project]
name = "maxwells-wallet-backend"
version = "0.9.1"
description = "Personal finance tracker with CSV import, smart categorization, and spending trend analysis."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "greenlet>=3.0.0",
    # Observability
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-semantic-conventions>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    # Scheduling
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.25.0",
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
    "vulture>=2.10",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
    "freezegun>=1.5.5",
]

[tool.vulture]
min_confidence = 80
paths = ["app"]
exclude = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "performance: marks tests as performance tests (deselect with '-m \"not performance\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
concurrency = ["greenlet"]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "alembic/versions",  # Auto-generated migration files
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Line too long - less critical, handled by formatter if needed
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py (re-exports)
"alembic/env.py" = ["F403", "F401"]  # Allow star imports in alembic

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Too strict for existing codebase
check_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Ignore third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "sqlmodel.*",
]
ignore_missing_imports = true

# SQLModel ORM-heavy modules - SQLModel's type system causes false positives
# for column attribute methods like .in_(), .is_(), .isnot(), etc.
[[tool.mypy.overrides]]
module = [
    "app.routers.reports",
    "app.routers.import_router",
    "app.routers.transactions",
    "app.routers.merchants",
    "app.routers.transfers",
    "app.routers.tags",
    "app.routers.tag_rules",
    "app.routers.dashboards",
    "app.routers.dashboard",
    "app.routers.recurring",
    "app.routers.filters",
    "app.routers.accounts",
    "app.routers.budgets",
    "app.routers.admin",
    "app.parsers.*",
    "app.parsers.formats.*",
    "app.middleware.*",
    "app.observability.*",
]
disable_error_code = ["attr-defined", "union-attr", "arg-type", "var-annotated", "assignment", "index", "operator", "return-value", "call-overload", "no-any-return", "misc"]
