[project]
name = "maxwells-wallet-backend"
version = "0.11.0"
description = "Personal finance tracker with CSV import, smart categorization, and spending trend analysis."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "pydantic>=2.13.0",
    "alembic>=1.18.4",
    "aiosqlite>=0.22.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "greenlet>=3.4.0",
    # Observability
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-semantic-conventions>=0.62b0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.62b0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "prometheus-client>=0.25.0",
    "structlog>=25.5.0",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
    # Scheduling
    "apscheduler>=3.11.2",
    # Authentication
    "bcrypt>=5.0.0",
    "PyJWT>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-benchmark>=5.2.3",
    "httpx>=0.28.1",
    "pytest-playwright>=0.7.2",
    "playwright>=1.58.0",
    "vulture>=2.16",
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "pip-audit>=2.10.0",
    "freezegun>=1.5.5",
    "hypothesis>=6.151.13",
]

[tool.vulture]
min_confidence = 80
paths = ["app"]
exclude = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "performance: marks tests as performance tests (deselect with '-m \"not performance\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
concurrency = ["greenlet"]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "alembic/versions",  # Auto-generated migration files
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # Line too long - less critical, handled by formatter if needed
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py (re-exports)
"alembic/env.py" = ["F403", "F401"]  # Allow star imports in alembic

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Too strict for existing codebase
check_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Ignore third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
]
ignore_missing_imports = true
